--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <title>HTML Images</title>
 </head>
 <body>
+<div>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
 
-  <!-- Your code here -->
+  <img src="https://images-na.ssl-images-amazon.com/images/I/81zewshg2eL.__AC_SX300_SY300_QL70_ML2_.jpg"
+  alt="My next camera" />
+
+  <img src="https://http2.mlstatic.com/D_NQ_NP_912423-MCO46559561769_062021-O.jpg"
+  alt="Next drone"
+  title="My arial camera" />
+
 
 </body>
 </html>
